# arcogine

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  TESTING.md  arcogine.code-workspace  codecov.yml  compose.yaml
.agents/plugins/: marketplace.json
.cursor/rules/: analysis-to-plan.mdc
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/sim-agents/: Cargo.toml
crates/sim-agents/src/: lib.rs  sales_agent.rs
crates/sim-agents/tests/: sales_agent.rs
crates/sim-api/: Cargo.toml
crates/sim-api/src/: lib.rs  routes.rs  server.rs  sse.rs  state.rs
crates/sim-api/tests/: agent_integration.rs  api_smoke.rs  scenario_baselines.rs
crates/sim-cli/: Cargo.toml
crates/sim-cli/src/: main.rs
crates/sim-core/: Cargo.toml
crates/sim-core/benches/: scenario_runtime.rs  scheduler.rs
crates/sim-core/src/: event.rs  handler.rs  kpi.rs  lib.rs  log.rs  queue.rs  runner.rs  scenario.rs
crates/sim-core/tests/: determinism.rs  event_ordering.rs  properties.rs  scenario_loading.rs
crates/sim-economy/: Cargo.toml
crates/sim-economy/src/: demand.rs  lib.rs  pricing.rs
crates/sim-economy/tests/: demand_model.rs  pricing.rs
crates/sim-factory/: Cargo.toml
crates/sim-factory/src/: jobs.rs  lib.rs  machines.rs  process.rs  routing.rs
crates/sim-factory/tests/: job_routing.rs  machine_state.rs  properties.rs
crates/sim-types/: Cargo.toml
crates/sim-types/src/: lib.rs  scenario.rs
devel/: Original-plan.md  codex-rate-limits-skill-plugin-plan.md  configuration-and-documentation-improvement-plan.md  deployment-options.md  logging-improvement-plan.md  product-and-workflow-entity-separation-plan.md  quality-gates-centralization-plan.md  security-improvement-plan.md  testability-improvement-plan.md
docs/: CONTRIBUTING.md  README.md  SECURITY.md  TESTING.md  api.md  architecture-overview.md  architecture.md  concepts.md  implementation-roadmap.md  quality-gates.md  standards-alignment.md  testing-strategy.md  vision.md
examples/: README.md  basic_scenario.toml  capacity_expansion_scenario.toml  overload_scenario.toml
plugins/codex-rate-limits/.codex-plugin/: plugin.json
plugins/codex-rate-limits/skills/check-codex-rate-limits/: SKILL.md
plugins/codex-rate-limits/skills/check-codex-rate-limits/references/: app-server-contract.md
ui/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts
ui/coverage/: clover.xml  coverage-final.json  index.html
ui/coverage/api/: client.ts.html  index.html  sse.ts.html
ui/coverage/components/dashboard/: JobTracker.tsx.html  KpiCards.tsx.html  index.html
ui/coverage/components/experiment/: BaselineCompare.tsx.html  index.html
ui/coverage/components/shared/: ErrorBoundary.tsx.html  Toast.tsx.html  index.html
ui/coverage/stores/: baselines.ts.html  index.html  simulation.ts.html
ui/e2e/: smoke.spec.ts
ui/src/: App.tsx  index.css
ui/src/api/: client.test.ts  client.ts  sse.test.ts  sse.ts
ui/src/components/dashboard/: FactoryFlow.tsx  JobTracker.test.tsx  JobTracker.tsx  KpiCards.test.tsx  KpiCards.tsx  MachineTable.tsx  TimeSeriesChart.tsx
ui/src/components/experiment/: BaselineCompare.test.tsx  BaselineCompare.tsx  ExportMenu.tsx
ui/src/components/layout/: BottomDrawer.tsx  Sidebar.tsx  Toolbar.tsx
ui/src/components/onboarding/: WelcomeOverlay.tsx
ui/src/components/shared/: ErrorBoundary.test.tsx  ErrorBoundary.tsx  SkeletonLoader.tsx  Toast.test.tsx  Toast.tsx
ui/src/data/: scenarios.ts
ui/src/stores/: baselines.test.ts  baselines.ts  simulation.test.ts  simulation.ts
(+1 files in other folders)
