[package]
name = "sim-api"
version = "0.1.0"
edition = "2021"

[dependencies]
sim-types = { path = "../sim-types" }
sim-core = { path = "../sim-core" }
sim-factory = { path = "../sim-factory" }
sim-economy = { path = "../sim-economy" }
sim-agents = { path = "../sim-agents" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.10", features = ["chacha"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
futures-core = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
http-body-util = "0.1"
