[package]
name = "sim-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arcogine"
path = "src/main.rs"

[dependencies]
sim-api = { path = "../sim-api" }
sim-types = { path = "../sim-types" }
sim-core = { path = "../sim-core" }
sim-factory = { path = "../sim-factory" }
sim-economy = { path = "../sim-economy" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
rand_chacha = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
