[package]
name = "sim-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sim-types = { path = "../sim-types" }
serde = { version = "1", features = ["derive"] }
toml = "1.1"
rand = "0.8"
rand_chacha = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scheduler"
harness = false

[[bench]]
name = "scenario_runtime"
harness = false
